<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="@dimen/_1sdp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/login" />

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_30sdp">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/log_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent">

                <EditText
                    android:id="@+id/edtLoginMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/mobile"
                    android:importantForAutofill="yes"
                    android:inputType="phone|number"
                    android:padding="@dimen/_7sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent">

                <EditText
                    android:id="@+id/imgLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password_"
                    android:importantForAutofill="yes"
                    android:inputType="textPassword"
                    android:padding="@dimen/_7sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:gravity="right"
                android:text="@string/forgot_pass"
                android:textColor="@color/black"

                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_gradient"
                android:paddingTop="@dimen/_18sdp"
                android:paddingBottom="@dimen/_18sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/register"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/new_to_register"
                android:textColor="@color/black" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>