<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_7sdp"
    android:background="@drawable/card_shadow">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/imgOrder">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvQuantityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:text="@string/quantity_tracking"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/tvQuantityTitle"
            android:textAlignment="viewStart"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvQuantity"
            android:layout_marginTop="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvActiveStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPrice"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_toStartOf="@id/cardViewTrack"
            android:paddingEnd="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPrice"
            android:layout_alignParentEnd="true"
            android:visibility="visible"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/tvTrackItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/track"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnCancel"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardViewTrack"
            android:layout_alignParentEnd="true"
            android:background="@color/colorAccent"
            android:minHeight="0dp"
            android:padding="3dp"
            android:text="@string/cancel_item"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnReturn"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardViewTrack"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:background="@color/colorPrimaryDark"
            android:minHeight="0dp"
            android:padding="3dp"
            android:text="@string/return_order"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgOrder"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/app_name" />

</RelativeLayout>