<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PasswordActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="@dimen/_1sdp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/colorPrimary" />
    <ScrollView
        android:layout_below="@+id/toolbar"
        android:id="@+id/lytSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_40sdp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_below="@id/toolbar"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/login" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/change_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black" />





            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone"
                android:background="@color/transparent">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:visibility="gone"
                android:background="@color/gray" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/transparent">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password_"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/gray" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/transparent">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/confirm_pass"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone"
                android:background="@color/transparent"
                android:hint="@string/refer_">

                <EditText
                    android:id="@+id/edtRefer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:drawableStart="@drawable/ic_refer_code"
                    android:drawablePadding="@dimen/_10sdp"
                    android:importantForAutofill="no"
                    android:inputType="textCapCharacters"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:visibility="gone"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/lytPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/msg_privacy_terms"
                    android:textColor="@color/dark_gray"
                    tools:ignore="UnusedAttribute"
                    tools:targetApi="o" />

            </LinearLayout>

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_gradient"
                android:paddingTop="@dimen/_18sdp"
                android:paddingBottom="@dimen/_18sdp"
                android:text="Change Password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>